- fix demo elements spacing

--- a/demo/demo.less
+++ b/demo/demo.less
@@ -8,7 +8,7 @@ body {
       }
       color: #1F2D3D;
       padding: 20px;
-      border-radius: 3px;
+      border-radius: 5px;
 
     }
 
